Basic routing and templating setup

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,5 +1,8 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h2>Ember app</h2>
+
+<ul>
+  <li>{{#link-to 'application'}}Home{{/link-to}}</li>
+  <li>{{#link-to 'supply-chains'}}Supply Chains{{/link-to}}</li>
+</ul>
 
 {{outlet}}
