Got #show route working for supply chains

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -2,7 +2,7 @@
 
 <ul>
   <li>{{#link-to 'application'}}Home{{/link-to}}</li>
-  <li>{{#link-to 'supply-chains'}}Supply Chains{{/link-to}}</li>
+  <li>{{#link-to 'supply-chains.index'}}Supply Chains{{/link-to}}</li>
 </ul>
 
 {{outlet}}
