--- a/frontend/app/templates/supply-chains/index.hbs
+++ b/frontend/app/templates/supply-chains/index.hbs
@@ -4,4 +4,5 @@
 
 {{#each model as |chain|}}
   <h3>{{chain.name}}</h3>
+  <p>{{#link-to "supply-chains.show" chain.id}}Show More{{/link-to}}</p>
 {{/each}}
