--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,8 +1,5 @@
 <h2>Ember app</h2>
 
-<ul>
-  <li>{{#link-to 'application'}}Home{{/link-to}}</li>
-  <li>{{#link-to 'supply-chains.index'}}Supply Chains{{/link-to}}</li>
-</ul>
+{{#nav-bar}}{{/nav-bar}}
 
 {{outlet}}
