--- a/frontend/app/templates/supply-chains/show.hbs
+++ b/frontend/app/templates/supply-chains/show.hbs
@@ -2,6 +2,8 @@
 
 <h3>Associated Goods</h3>
 
-{{#each goods as |good|}}
-  <h4>Good</h4>
+{{#each model.goods as |good|}}
+  <h4>{{good.name}}</h4>
+  <h4>{{good.origin}}</h4>
+  <h4>{{good.purpose}}</h4>
 {{/each}}
