styling out navbar

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,8 +1,11 @@
 {{yield}}
 
 <div class="navigation">
+  <h2 class="logo">{{#link-to 'application'}}COFFEE:PRINT{{/link-to}}</h2>
   <ul>
-    <li>{{#link-to 'application'}}Home{{/link-to}}</li>
+    <li>Coffee</li>
+    <li>Print</li>
+    <li>Training</li>
     <li>{{#link-to 'supply-chains.index'}}Supply Chains{{/link-to}}</li>
   </ul>
 </div>
