more routes and such

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -3,9 +3,9 @@
 <div class="navigation">
   <h2 class="logo">{{#link-to 'application'}}COFFEE:PRINT{{/link-to}}</h2>
   <ul>
-    <li>Coffee</li>
-    <li>Print</li>
-    <li>Training</li>
+    <li>{{#link-to 'coffee.index'}}Coffee{{/link-to}}</li>
+    <li>{{#link-to 'print.index'}}Print{{/link-to}}</li>
+    <li>{{#link-to 'training.index'}}Training{{/link-to}}</li>
     <li>{{#link-to 'supply-chains.index'}}Supply Chains{{/link-to}}</li>
   </ul>
 </div>
