css and font design updates

--- a/frontend/app/templates/home.hbs
+++ b/frontend/app/templates/home.hbs
@@ -5,7 +5,7 @@
 
 <p>
   So often, we're told about how a coffee is ethically sourced. While this is worth celebrating with labels
-  like _Fair Trade_, we believe that we can do more to communicate this to the customer. Its worth understanding
+  like <i>Fair Trade</i>, we believe that we can do more to communicate this to the customer. Its worth understanding
   what's happening when you buy coffee
 </p>
 
