--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,3 +1,15 @@
+h1, h2, h3, h4, h5 {
+    font-family: 'Allerta Stencil', sans-serif;
+}
+
+
+p, a {
+    font-size: 1.20em;
+    font-family: 'Playfair Display', serif;
+    letter-spacing: 0.5px;
+}
+
 @import 'navbar';
 @import 'goods';
 @import 'supply_chains';
+
