--- a/frontend/app/templates/coffee/index.hbs
+++ b/frontend/app/templates/coffee/index.hbs
@@ -7,7 +7,7 @@
     <div class="component-content">
       <h3>{{coffee.name}}</h3>
       <h4>{{coffee.origin}}</h4>
-      <p>{{#link-to "coffee.show" coffee.id}}Learn More{{/link-to}}</p>
+      <p>{{#link-to "coffee.show" coffee.id}}Read More{{/link-to}}</p>
     </div>
   </div>
 {{/each}}
