adding in edit route; working through layout and css issues on the site

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -13,6 +13,15 @@ p, a {
     }
 }
 
+.divider {
+    width: 100%;
+    border: 2px solid black;
+}
+
+.application-outlet-content {
+    margin: 10% 15%;
+}
+
 @import 'coffee';
 @import 'navbar';
 @import 'goods';
