--- a/frontend/app/templates/coffee/show.hbs
+++ b/frontend/app/templates/coffee/show.hbs
@@ -1,10 +1,43 @@
 {{outlet}}
 
-<div class="coffee-descriptor">
-    <h2 class="coffee-name">{{model.name}}</h2>
+<div class="show-coffee-section">
 
-    <p>This coffee originated from <b>{{model.origin}}</b></p>
+    <img src="https://cdn.shopify.com/s/files/1/2206/9449/files/IMG_2921_1000x.jpg?v=1543993355"
+        class="coffee-picture" />
 
-    <p>Our suppliers and roasters agree on the following ideas around this coffee:</p>
-    <p class="coffee-purpose">{{model.purpose}}</p>
+    <div class="coffee-descriptor">
+        <h2 class="coffee-name">{{model.name}}</h2>
+
+        <p>This coffee originated from <b>{{model.origin}}</b></p>
+
+        <p>Our suppliers and roasters agree on the following ideas around this coffee:</p>
+        <p class="coffee-purpose">{{model.purpose}}</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="supply-chain-descriptor">
+        <h4>Let's talk about the supply chain this coffee is a part of:</h4>
+
+        <p>Something something something good and real and nice and ethical</p>
+
+        <h3>It has a total rating of: 8.0</h3>
+
+        <div class="whats-right">
+            <h4>There are a few things we did really well with sourcing this coffee</h4>
+            <ul>
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+            </ul>
+        </div>
+        <div class="what-could-be-better">
+            <h4>There are a few things we could do better with when sourcing this coffee</h4>
+            <ul>
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+            </ul>
+        </div>
+    </div>
 </div>
