modifying general site copy

--- a/frontend/app/templates/coffee/index.hbs
+++ b/frontend/app/templates/coffee/index.hbs
@@ -1,6 +1,23 @@
 {{outlet}}
 
-<h2>Coffee</h2>
+<h2>Coffee Runs The World</h2>
+
+<p>
+  Lots of us drink coffee on the regular. However, for it being a vastly
+  consumed product, we don't ever think a whole lot about how it comes to our cup.
+</p>
+
+<p>
+  Recent waves in coffee production have championed the farmer. This is so cool!
+  Yet, I think we can use this momentum to better shine a light on <i>every part</i>
+  of the production, shipping, roasting, and creation process.
+</p>
+
+<p>
+  Here's a list of the coffee's we currently provide or have provided in the past.
+  We've filled out the supply chains to the best extent possible. However,
+  we're always iterating and updating on the process.
+</p>
 
 {{#each model as |coffee|}}
   <div class="supply-chain-component">
