--- a/frontend/app/templates/home.hbs
+++ b/frontend/app/templates/home.hbs
@@ -1,6 +1,6 @@
-<h1>This is Coffee:Print.</h1>
+<h1>This is Coffee + Print.</h1>
 <p>
-  We're a community dedicated to celebrating the intersection of great coffee and ethical supply chains.
+  We're a community dedicated to celebrating the intersection of great coffee, art, and ethical supply chains.
 </p>
 
 <p>
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-  Coffee:Print desired to further the farmer / buyer relationship by providing a honest commentary on 
+  Coffee + Print desired to further the farmer / buyer relationship by providing a honest commentary on 
   why it matters but how it can be improved. From this, we want to create a blueprint for a successful business
   but also a boundary-pushing community that helps ethical coffee make it into more homes and hearts.
 </p>
