--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,7 +1,7 @@
 {{yield}}
 
 <div class="navigation">
-  <h2 class="logo">{{#link-to 'application'}}COFFEE:PRINT{{/link-to}}</h2>
+  <h2 class="logo">{{#link-to 'application'}}COFFEE + PRINT{{/link-to}}</h2>
   <ul>
     <li>{{#link-to 'coffee.index'}}Coffee{{/link-to}}</li>
     <li>{{#link-to 'print.index'}}Print{{/link-to}}</li>
