iterating on rating values a bit more; working through relationships

--- a/frontend/app/templates/coffee/show.hbs
+++ b/frontend/app/templates/coffee/show.hbs
@@ -21,7 +21,7 @@
 
         <p>Something something something good and real and nice and ethical</p>
 
-        <h3>It has a total rating of: 8.0</h3>
+        <h3>It has a total rating of: {{model.mostRecentRatingValue}}</h3>
 
         <div class="whats-right">
             <h4>There are a few things we did really well with sourcing this coffee</h4>
