updating goods now worksi

--- a/frontend/app/templates/coffee/edit.hbs
+++ b/frontend/app/templates/coffee/edit.hbs
@@ -1,19 +1,23 @@
 {{outlet}}
 
-<form>
+<form {{action 'updateProduct' model on="submit"}}>
   <div class="input-group">
     <label>Name</label>
-    {{input value=coffee.name}}
+    {{input value=model.name}}
   </div>
 
   <div class="input-group">
     <label>Origin</label>
-    {{input value=coffee.origin}}
+    {{input value=model.origin}}
   </div>
 
   <div class="input-group">
     <label>Purpose</label>
-    {{input value=coffee.purpose}}
+    {{input value=model.purpose}}
+  </div>
+
+  <div>
+    <button type="submit">Update Product</button>
   </div>
 
 </form>
