cleaning up dependencies; adding bulma css via ember-bulma

--- a/frontend/app/templates/coffee/index.hbs
+++ b/frontend/app/templates/coffee/index.hbs
@@ -20,7 +20,7 @@
 </p>
 
 {{#each model as |coffee|}}
-  <div class="supply-chain-component">
+  <div class="supply-chain-component box">
     <div class="component-content">
       <h3>{{coffee.name}}</h3>
       <h4>{{coffee.origin}}</h4>
