importing bulma into the app

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,4 +1,5 @@
-@import 'bulma';
+// Note: Bulma is imported from `ember-cli-build.js
+// It will show up in the app under `vendor.css`
 
 .divider {
     width: 100%;
