--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,10 +1,14 @@
 {{yield}}
 
-<div class="navigation">
-  <h2 class="logo">{{#link-to 'application'}}COFFEE + PRINT{{/link-to}}</h2>
-  <ul>
-    <li>{{#link-to 'coffee.index'}}Coffee{{/link-to}}</li>
-    <li>{{#link-to 'print.index'}}Print{{/link-to}}</li>
-    <li>{{#link-to 'training.index'}}Training{{/link-to}}</li>
-  </ul>
+<div class="navigation level">
+  <div class="level-left">
+    <h2 class="logo">{{#link-to 'application'}}COFFEE + PRINT{{/link-to}}</h2>
+  </div>
+  <div class="level-right">
+    <ul>
+      <li>{{#link-to 'coffee.index'}}Coffee{{/link-to}}</li>
+      <li>{{#link-to 'print.index'}}Print{{/link-to}}</li>
+      <li>{{#link-to 'training.index'}}Training{{/link-to}}</li>
+    </ul>
+  </div>
 </div>
