--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,8 +1,35 @@
 // Note: Bulma is imported from `ember-cli-build.js
 // It will show up in the app under `vendor.css`
 
+h1 {
+    font-size: 3.0em;
+    letter-spacing: 3px;
+    margin-bottom: 6px;
+}
+
+h2 {
+    font-size: 2.6em;
+    letter-spacing: 2px;
+    margin-bottom: 3px;
+}
+
+h3 {
+    font-size: 2.2em;
+    letter-spacing: 1px;
+    margin-bottom: 2px;
+}
+
+h4 {
+    font-size: 1.8em;
+    margin-bottom: 2px;
+}
+
+p {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
 .divider {
-    width: 100%;
     border: 2px solid black;
 }
 
