--- a/frontend/app/styles/navbar.scss
+++ b/frontend/app/styles/navbar.scss
@@ -1,6 +1,7 @@
 .navigation {
   background: black;
   padding: 10px;
+  margin-bottom: 40px;
 
   a {
     text-decoration: none;
@@ -12,12 +13,14 @@
   .logo {
     color: white;
     font-size: 2.0em;
+    letter-spacing: 6px;
   }
   
   li {
     display: inline-flex;
     color: white;
     font-size: 1.75em;
+    letter-spacing: 2px;
     padding: 10px;
     
   }
