--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,5 +1,11 @@
 {{#nav-bar}}{{/nav-bar}}
 
-<div class="application-outlet-content">
-  {{outlet}}
+<div class="container">
+  <div class="columns">
+    <div class="column is-1"></div>
+    <div class="column is-10">
+      {{outlet}}
+    </div>
+     <div class="column is-1"></div>
+  </div>
 </div>
