--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -6,9 +6,9 @@
   </div>
   <div class="level-right">
     <ul>
-      <li>{{#link-to 'coffee.index'}}Coffee{{/link-to}}</li>
-      <li>{{#link-to 'print.index'}}Print{{/link-to}}</li>
-      <li>{{#link-to 'training.index'}}Training{{/link-to}}</li>
+      <li>{{#link-to 'coffee.index'}}COFFEE{{/link-to}}</li>
+      <li>{{#link-to 'print.index'}}PRINT{{/link-to}}</li>
+      <li>{{#link-to 'training.index'}}LEARNING{{/link-to}}</li>
     </ul>
   </div>
 </div>
