more bulma things

--- a/frontend/app/templates/coffee/index.hbs
+++ b/frontend/app/templates/coffee/index.hbs
@@ -19,9 +19,9 @@
   we're always iterating and updating on the process.
 </p>
 <div class="tile is-ancestor">
-  <div class="tile is-vertical is-9">
+  <div class="tile is-12">
     {{#each model as |coffee|}}  
-      <div class="tile">
+      <div class="tile is-4">
         <div class="tile is-parent">
           <article class="tile is-child box">
             <h3>{{coffee.name}}</h3>
